<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TP2_LocalisationMap</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_menu">Menu</string>

    <string name="action_settings">Settings</string>

    <string name="mode">Mode</string>
    <string name="GPS">GPS</string>
    <string name="network">Mobile network</string>
    <string name="zoom">Zoom</string>
    <string name="start">Start</string>
    <string name="itineraryHistory">History</string>
    <string name="exit">Exit</string>
    <string name="openmap">Open Map</string>

    <string name="setdestination">Destination:</string>
    <string name="setfrom">From:</string>
    <string name="frequency">Frequency</string>
    <string name="title_activity_from_to">FromToActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="ignore">Ignore</string>
    <string name="settings">Settings</string>
    <string name="imgcapture">Take Picture</string>
    <string name="itineraries_info">Itineraries:</string>
</resources>
