<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.polymtl.jiajing.tp2_localisationmap.MenuActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:id="@+id/menuLinearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/mode"
            android:id="@+id/textViewMode"
            android:layout_marginTop="20dp"
            android:layout_weight="2" />
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:layout_weight="2">

            <RadioButton
                android:id="@+id/radioBtnGPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/GPS"/>
            <RadioButton
                android:id="@+id/radioBtnNetwork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/zoom"
            android:id="@+id/textViewZoom"
            android:layout_marginTop="20dp"
            android:layout_weight="2" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarZoom"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="2" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/btnStart"
            android:text="@string/start"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="2"
            android:textStyle="bold"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/btnItineraryHistory"
            android:text="@string/itineraryHistory"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="2"
            android:textStyle="bold"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/btnExit"
            android:text="@string/itineraryHistory"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="2"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>
